# sparks

./: Cargo.toml  Containerfile  README.md  cargo-podman
src/: commands.rs  dice.rs  interpreter.rs  lib.rs  main.rs  util.rs
src/commands/: draw.rs  flip.rs  help_text.md  misc.rs  roll.rs
src/interpreter/: custom.rs  fitd.rs  pbta.rs  sbr.rs  sunblack.rs  ww.rs
