[package]
name = "sparks"
version = "1.4.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
poise = { version = "0.6" }
tokio = { version = "1.41", features = ["full"] }
color-eyre = { version = "0.6", default-features = false }
itertools = "0.13.0"
lazy_static = "1.5.0"

[dev-dependencies]
pretty_assertions = "1.4"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
