[package]
name = "sparks"
version = "1.4.0"
edition = "2021"

[dependencies]
rand = "0.9"
poise = { version = "0.6" }
tokio = { version = "1.41", features = ["full"] }
color-eyre = { version = "0.6", default-features = false }
itertools = "0.14.0"
lazy_static = "1.5.0"

[dev-dependencies]
pretty_assertions = "1.4"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_panics_doc= "allow"
